--- a/src/main/resources/com/project/app/fxml/components/sidebar.fxml
+++ b/src/main/resources/com/project/app/fxml/components/sidebar.fxml
@@ -2,19 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="1000.0" prefWidth="290.0" style="-fx-background-color: #1B4332;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.SidebarController">
    <children>
-      <VBox layoutX="115.0" layoutY="93.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="115.0" layoutY="93.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#goHome" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Home" textFill="WHITE">
+            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#goHome" prefHeight="61.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Home" textFill="WHITE">
                <font>
-                  <Font name="Georgia" size="24.0" />
+                  <Font name="Georgia" size="18.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -24,9 +27,9 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnPenawaran" mnemonicParsing="false" onAction="#goPenawaran" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Penawaran" textFill="WHITE">
+            <Button fx:id="btnPenawaran" mnemonicParsing="false" onAction="#goPenawaran" prefHeight="87.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Penawaran" textFill="WHITE">
                <font>
-                  <Font name="Georgia" size="24.0" />
+                  <Font name="Georgia" size="18.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -36,9 +39,9 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnTagihan" mnemonicParsing="false" onAction="#goTagihan" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Tagihan" textFill="WHITE">
+            <Button fx:id="btnTagihan" mnemonicParsing="false" onAction="#goTagihan" prefHeight="87.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Tagihan" textFill="WHITE">
                <font>
-                  <Font name="Georgia" size="24.0" />
+                  <Font name="Georgia" size="18.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -48,9 +51,9 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnSparepart" mnemonicParsing="false" onAction="#goSparepart" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Sparepart" textFill="WHITE">
+            <Button fx:id="btnSparepart" mnemonicParsing="false" onAction="#goSparepart" prefHeight="87.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Sparepart" textFill="WHITE">
                <font>
-                  <Font name="Georgia" size="24.0" />
+                  <Font name="Georgia" size="18.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -62,9 +65,9 @@
             </Button>
             <AnchorPane prefHeight="87.0" prefWidth="290.0">
                <children>
-                  <Button fx:id="btnLogoutAdmin" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Button fx:id="btnLogoutAdmin" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
-                        <Font name="Georgia" size="24.0" />
+                        <Font name="Georgia" size="18.0" />
                      </font>
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -74,9 +77,9 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btnManageAccount" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#goManageAccount" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Manage Accounts" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Button fx:id="btnManageAccount" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#goManageAccount" prefHeight="87.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Manage Accounts" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
-                        <Font name="Georgia" size="24.0" />
+                        <Font name="Georgia" size="18.0" />
                      </font>
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -88,9 +91,9 @@
                   </Button>
                </children>
             </AnchorPane>
-            <Button fx:id="btnLogoutOwner" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="290.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE">
+            <Button fx:id="btnLogoutOwner" mnemonicParsing="false" onAction="#goLogout" prefHeight="87.0" prefWidth="270.0" style="-fx-alignment: CENTER_LEFT; -fx-graphic-text-gap: 20; -fx-background-color: transparent;" text="Logout" textFill="WHITE">
                <font>
-                  <Font name="Georgia" size="24.0" />
+                  <Font name="Georgia" size="18.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
@@ -100,6 +103,24 @@
                   </ImageView>
                </graphic>
             </Button>
+            <VBox alignment="BOTTOM_CENTER" prefHeight="479.0" prefWidth="270.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="11.0" prefWidth="270.0">
+                     <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Wanna Change Password?">
+                           <font>
+                              <Font name="Georgia" size="13.0" />
+                           </font>
+                        </Text>
+                        <Hyperlink text="Click Me!">
+                           <font>
+                              <Font name="Georgia" size="13.0" />
+                           </font>
+                        </Hyperlink>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
