--- a/src/main/resources/com/project/app/fxml/contents/home.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/home.fxml
@@ -183,9 +183,9 @@
                   </AnchorPane>
                   <HBox prefHeight="566.0" prefWidth="1070.0" spacing="10.0">
                      <children>
-                        <VBox prefHeight="539.0" prefWidth="1090.0">
+                        <VBox prefHeight="539.0" prefWidth="1304.0">
                            <children>
-                              <AnchorPane prefHeight="578.0" prefWidth="530.0" style="-fx-background-color: white; -fx-background-radius: 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8;">
+                              <AnchorPane prefHeight="539.0" prefWidth="642.0" style="-fx-background-color: white; -fx-background-radius: 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8;">
                                  <children>
                                     <VBox layoutX="92.0" layoutY="70.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                                        <children>
@@ -195,7 +195,7 @@
                                                    <children>
                                                       <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                          <children>
-                                                            <TextField fx:id="searchField" prefHeight="32.0" prefWidth="441.0" promptText="Search" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="searchField" prefHeight="31.0" prefWidth="546.0" promptText="Search" style="-fx-background-color: transparent;" />
                                                             <Button fx:id="btnSearch" mnemonicParsing="false" prefHeight="34.0" prefWidth="6.0" style="-fx-background-color: transparent;">
                                                                <graphic>
                                                                   <ImageView fitHeight="23.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
@@ -211,19 +211,19 @@
                                                 </AnchorPane>
                                              </children>
                                           </HBox>
-                                          <TableView prefHeight="370.0" prefWidth="488.0">
-                                            <columns>
-                                              <TableColumn prefWidth="42.0" text="ID" />
-                                              <TableColumn prefWidth="139.0" text="Username" />
-                                                <TableColumn prefWidth="71.0" text="Total SP" />
-                                                <TableColumn prefWidth="77.0" text="Total TBL" />
-                                                <TableColumn prefWidth="75.0" text="Total TL" />
-                                                <TableColumn prefWidth="82.0" text="Total TB" />
-                                            </columns>
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy>
-                                          </TableView>
+                                           <TableView fx:id="tableUsers" prefHeight="370.0" prefWidth="488.0">
+                                               <columns>
+                                                   <TableColumn fx:id="colId" prefWidth="42.0" text="ID" />
+                                                   <TableColumn fx:id="colUsername" prefWidth="139.0" text="Username" />
+                                                   <TableColumn fx:id="colSP" prefWidth="71.0" text="Total SP" />
+                                                   <TableColumn fx:id="colTBL" prefWidth="77.0" text="Total TBL" />
+                                                   <TableColumn fx:id="colTL" prefWidth="75.0" text="Total TL" />
+                                                   <TableColumn fx:id="colTB" prefWidth="82.0" text="Total TB" />
+                                               </columns>
+                                               <columnResizePolicy>
+                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                               </columnResizePolicy>
+                                           </TableView>
                                           <VBox prefHeight="104.0" prefWidth="488.0" spacing="2.0">
                                              <children>
                                                 <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="Keterangan :">
@@ -274,21 +274,19 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="392.0">
                                                    <children>
-                                                      <ComboBox prefHeight="42.0" prefWidth="150.0" />
-                                                   </children>
-                                                </HBox>
+                                                      <ComboBox fx:id="comboMonth" prefHeight="33.0" prefWidth="174.0" promptText="Rentang Waktu" />
+                                                   </children></HBox>
                                              </children>
                                           </HBox>
-                                          <TableView prefHeight="246.0" prefWidth="488.0">
-                                            <columns>
-                                              <TableColumn prefWidth="267.0" text="Transaksi" />
-                                                <TableColumn minWidth="0.0" prefWidth="99.0" text="Total" />
-                                                <TableColumn prefWidth="120.0" text="MoM (%)" />
-                                            </columns>
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy>
-                                          </TableView>
+                                           <TableView fx:id="tableDetail" prefHeight="246.0" prefWidth="488.0">
+                                               <columns>
+                                                   <TableColumn fx:id="colTransaksi" prefWidth="267.0" text="Transaksi" />
+                                                   <TableColumn fx:id="colTotal" minWidth="0.0" prefWidth="99.0" text="Total" />
+                                               </columns>
+                                               <columnResizePolicy>
+                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                               </columnResizePolicy>
+                                           </TableView>
                                        </children>
                                     </VBox>
                                  </children>
@@ -318,11 +316,11 @@
                                                       <Font name="Georgia" size="14.0" />
                                                    </font>
                                                 </Text>
-                                                <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
+                                                <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="267.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="240.0">
                                                          <children>
-                                                            <TextField fx:id="fieldBelumBayar" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="fieldBelumBayar" prefHeight="41.0" prefWidth="220.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -343,9 +341,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="240.0">
                                                          <children>
-                                                            <TextField fx:id="fieldLunas" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="fieldLunas" prefHeight="41.0" prefWidth="220.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -366,9 +364,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="240.0">
                                                          <children>
-                                                            <TextField fx:id="fieldBatal" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="fieldBatal" prefHeight="41.0" prefWidth="220.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -389,9 +387,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="240.0">
                                                          <children>
-                                                            <TextField fx:id="fieldJatuhTempo" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="fieldJatuhTempo" prefHeight="41.0" prefWidth="220.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
