--- a/src/main/resources/com/project/app/fxml/contents/homestaff.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/homestaff.fxml
@@ -115,9 +115,9 @@
                   </AnchorPane>
                   <HBox prefHeight="654.0" prefWidth="1070.0" spacing="10.0">
                      <children>
-                        <VBox prefHeight="539.0" prefWidth="1090.0">
+                        <VBox prefHeight="647.0" prefWidth="1291.0">
                            <children>
-                              <AnchorPane prefHeight="669.0" prefWidth="530.0" style="-fx-background-color: white; -fx-background-radius: 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8;">
+                              <AnchorPane prefHeight="647.0" prefWidth="667.0" style="-fx-background-color: white; -fx-background-radius: 8; -fx-border-color: #c8c8c8; -fx-border-radius: 8;">
                                  <children>
                                     <VBox layoutX="92.0" layoutY="70.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                                        <children>
@@ -127,8 +127,8 @@
                                                    <children>
                                                       <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                          <children>
-                                                            <TextField prefHeight="32.0" prefWidth="441.0" promptText="Search" style="-fx-background-color: transparent;" />
-                                                            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="6.0" style="-fx-background-color: transparent;">
+                                                            <TextField fx:id="searchField" prefHeight="31.0" prefWidth="543.0" promptText="Search" style="-fx-background-color: transparent;" />
+                                                            <Button fx:id="btnSearch" mnemonicParsing="false" prefHeight="34.0" prefWidth="6.0" style="-fx-background-color: transparent;">
                                                                <graphic>
                                                                   <ImageView fitHeight="23.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
@@ -143,11 +143,11 @@
                                                 </AnchorPane>
                                              </children>
                                           </HBox>
-                                          <TableView prefHeight="567.0" prefWidth="488.0">
+                                          <TableView fx:id="tableAktivitas" prefHeight="567.0" prefWidth="488.0">
                                             <columns>
-                                              <TableColumn prefWidth="139.0" text="Aktivitas" />
-                                                <TableColumn prefWidth="71.0" text="Tanggal" />
-                                                <TableColumn prefWidth="77.0" text="Pukul" />
+                                              <TableColumn fx:id="colAktivitas" prefWidth="139.0" text="Aktivitas" />
+                                                <TableColumn fx:id="colTgl" prefWidth="71.0" text="Tanggal" />
+                                                <TableColumn fx:id="colPukul" prefWidth="77.0" text="Pukul" />
                                             </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -174,16 +174,15 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="392.0">
                                                    <children>
-                                                      <ComboBox prefHeight="42.0" prefWidth="150.0" />
+                                                      <ComboBox fx:id="comboRentang" prefHeight="42.0" prefWidth="150.0" />
                                                    </children>
                                                 </HBox>
                                              </children>
                                           </HBox>
-                                          <TableView prefHeight="196.0" prefWidth="484.0">
+                                          <TableView fx:id="tableDokumen" prefHeight="196.0" prefWidth="484.0">
                                             <columns>
-                                              <TableColumn prefWidth="267.0" text="Dokumen" />
-                                                <TableColumn minWidth="0.0" prefWidth="99.0" text="Total" />
-                                                <TableColumn prefWidth="120.0" text="MoM (%)" />
+                                              <TableColumn fx:id="colDokumen" prefWidth="256.0" text="Dokumen" />
+                                                <TableColumn fx:id="colTotal" minWidth="0.0" prefWidth="126.0" text="Total" />
                                             </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -218,11 +217,11 @@
                                                       <Font name="Georgia" size="14.0" />
                                                    </font>
                                                 </Text>
-                                                <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
+                                                <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="253.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox prefHeight="30.0" prefWidth="200.0">
                                                          <children>
-                                                            <TextField prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="spField" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -243,9 +242,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox prefHeight="30.0" prefWidth="200.0">
                                                          <children>
-                                                            <TextField prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="tagihanField" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -268,7 +267,7 @@
                                              <children>
                                                 <ImageView fitHeight="150.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
-                                                      <Image url="@../../images/belum%20bayar.png" />
+                                                      <Image url="@../../images/belumbayar.png" />
                                                    </image>
                                                 </ImageView>
                                                 <Text fill="#838383" strokeType="OUTSIDE" strokeWidth="0.0" text="Belum Dibayar :">
@@ -278,9 +277,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox prefHeight="30.0" prefWidth="200.0">
                                                          <children>
-                                                            <TextField prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="tblField" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -301,9 +300,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox prefHeight="30.0" prefWidth="200.0">
                                                          <children>
-                                                            <TextField prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="tlField" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -324,9 +323,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox prefHeight="30.0" prefWidth="200.0">
                                                          <children>
-                                                            <TextField prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="tbField" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
@@ -347,9 +346,9 @@
                                                 </Text>
                                                 <HBox alignment="TOP_RIGHT" prefHeight="30.0" prefWidth="488.0">
                                                    <children>
-                                                      <HBox prefHeight="30.0" prefWidth="300.0">
+                                                      <HBox prefHeight="30.0" prefWidth="200.0">
                                                          <children>
-                                                            <TextField prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
+                                                            <TextField fx:id="tjtField" prefHeight="41.0" prefWidth="326.0" style="-fx-background-color: transparent;" />
                                                          </children>
                                                       </HBox>
                                                    </children>
