--- a/src/main/resources/com/project/app/fxml/contents/penawaran.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/penawaran.fxml
@@ -71,30 +71,50 @@
                               </AnchorPane>
                            </children>
                         </AnchorPane>
-                        <Button fx:id="btnAddPenawaran" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="36.0" prefWidth="207.0" text="Tambah Penawaran">
-                           <graphic>
-                              <ImageView fitHeight="26.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../images/plus-penawaran.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font name="Georgia" size="15.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="btnRefresh" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goRefresh" prefHeight="36.0" prefWidth="130.0" text="Refresh">
-                           <graphic>
-                              <ImageView fitHeight="26.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../images/refresh-manageaccount.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font name="Georgia" size="15.0" />
-                           </font>
-                        </Button>
+                        <HBox prefHeight="36.0" prefWidth="518.0" spacing="20.0">
+                           <children>
+                              <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                 <children>
+                                    <Button fx:id="btnRefreshOwner" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goRefresh" prefHeight="36.0" prefWidth="130.0" text="Refresh">
+                                       <graphic>
+                                          <ImageView fitHeight="26.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../../images/refresh-manageaccount.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <font>
+                                          <Font name="Georgia" size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="btnAddPenawaran" graphicTextGap="10.0" layoutX="-53.0" layoutY="-9.0" mnemonicParsing="false" onAction="#goAdd" prefHeight="36.0" prefWidth="207.0" text="Tambah Penawaran" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <graphic>
+                                          <ImageView fitHeight="26.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../../images/plus-penawaran.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <font>
+                                          <Font name="Georgia" size="15.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </AnchorPane>
+                              <Button fx:id="btnRefresh" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goRefresh" prefHeight="36.0" prefWidth="130.0" text="Refresh">
+                                 <graphic>
+                                    <ImageView fitHeight="26.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../images/refresh-manageaccount.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font name="Georgia" size="15.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </HBox>
                      </children>
                   </HBox>
                   <VBox>
